--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-tabs/cephfs-tabs.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cephfs/cephfs-tabs/cephfs-tabs.component.html
@@ -20,6 +20,15 @@
                                   [pools]="details.pools"></cd-cephfs-subvolume-list>
       </ng-template>
     </ng-container>
+    <ng-container ngbNavItem="subvolume-groups">
+      <a ngbNavLink
+         i18n>Subvolume groups</a>
+      <ng-template ngbNavContent>
+        <cd-cephfs-subvolume-group [fsName]="selection.mdsmap.fs_name"
+                                   [pools]="details.pools">
+        </cd-cephfs-subvolume-group>
+      </ng-template>
+    </ng-container>
     <ng-container ngbNavItem="clients">
       <a ngbNavLink>
         <ng-container i18n>Clients</ng-container>
